# de_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  LICENSE  README.md  airflow-init-db.sql  docker-compose.yml  pyproject.toml  requirements-airflow.txt  run_pipeline.py
airflow_dags/: backfill.py
aws_cloud/glue/: README.md  mart_daily_intensity_job.py
dags/: backfill.py  ingest_and_load.py  transform.py
dbt_uk_carbon/models/core/: _core_models.yml  dim_date.sql  fct_half_hourly_intensity.sql
dbt_uk_carbon/models/marts/: _marts_models.yml  mart_daily_intensity.sql  mart_forecast_accuracy.sql
dbt_uk_carbon/models/staging/: stg_generation.sql
dbt_uk_carbon/tests/: assert_intensity_in_range.sql
src/: config.py
src/ingestion/: api_client.py  ingest_api.py
src/models/: schemas.py
src/staging/: staging.py
src/storage/: init_db.sql  loader.py  psql_loader.py  raw_loader.py  s3_loader.py  staging.py
src/validation/: validate.py
tests/: test_api_client.py  test_ingest_api.py  test_raw_loader.py  test_run_pipeline.py  test_schema.py  test_staging.py  test_validate.py
uk_carbon/: README.md  dbt_project.yml  profiles.yml  profiles.yml.docker
uk_carbon/models/core/: dim_fuel.sql  dim_region.sql  fct_half_hourly_generation.sql
uk_carbon/models/marts/: _marts_models.yml  dim_fuel.sql  dim_region.sql  fct_daily_intensity.sql  fct_forecast_accuracy.sql  fct_generation_mix.sql  mart_daily_generation_mix.sql
uk_carbon/models/staging/: _staging_sources.yml  stg_national_intensity.sql  stg_regional.sql
